---
title: Group
---

classDiagram
    direction LR

    class Group {
        -Collection~GroupMargin~ margins
        -Collection~Category~ categories
        +addMargin(GroupMargin)
        +removeMargin(GroupMargin)
        +getMargins() Collection~GroupMargin~
        +addCategory(Category)
        +removeCategory(Category)
        +getCategories() Collection~Category~
    }

    class GroupMargin {
        -Group group
        +getGroup() Group
        +set(Group)
    }

    class AbstractMargin {
        <<Abstract>>
    }

    class AbstractEntity {
        <<Abstract>>
    }

    class AbstractCodeEntity {
        <<Abstract>>
    }

    class EntityInterface {
        <<Interface>>
    }

    EntityInterface <|.. AbstractEntity
    AbstractCodeEntity <|-- Group
    AbstractEntity <|-- AbstractCodeEntity
    AbstractMargin <|-- GroupMargin

    Group "0" --* "*" GroupMargin
    Group "0" --> "*" Category
    Category "0" --> "*" Product
    Category "0" --> "*" Task

    click EntityInterface call nodeCallback()
    click AbstractEntity call nodeCallback()
    click AbstractCodeEntity call nodeCallback()
    click AbstractMargin call nodeCallback()
    click Category call nodeCallback()
    click Product call nodeCallback()
    click Task call nodeCallback()
